# audiowire

./: .gitignore  Cargo.toml
audiowire/: Cargo.toml
audiowire-sys/: Cargo.toml  build.rs  wrapper.h
audiowire-sys/src/: lib.rs
audiowire/src/: handlers.rs  lib.rs  logging.rs  opus.rs  peer.rs
audiowire/src/audiowire/: config.rs  errors.rs  mod.rs  result.rs  stream.rs
libaudiowire/: .clang-format  .gitignore  meson.build
libaudiowire/include/: audiowire.h  ringbuf.h
libaudiowire/src/: common.c  coreaudio.c  internals.h  portaudio.c  pulseaudio.c  ringbuf.c
libaudiowire/tests/: audiowire_test.c  ringbuf_test.c
