[package]
name = "audiowire"
version = "0.1.0"
edition = "2021"

[dependencies]
audiowire-sys = { path = "../audiowire-sys" }
chrono = "0.4.39"
opus = "0.3.0"
slog = "2.7.0"
slog-async = "2.8.0"
slog-term = "2.9.1"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "net", "io-util", "time"] }

[[bin]]
name = "audiowire-server"
path = "./src/bin/server.rs"

[[bin]]
name = "audiowire-client"
path = "./src/bin/client.rs"
